8. Ders: Integration Tests